# ssg-dataset

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  TODO.md  a.py  badge.md  badge.py  generate_svg.py  install_just.sh  justfile  package-lock.json  package.json  plot.py  pyproject.toml  requirements.txt  ssg.ipynb  ssg.yaml  stars.py  streamlit_app.py  table.py
.github/workflows/: .pytest.yml
app/: Static_site_generators.py  badge.py  data.py  release.md
app/pages/: 1_Forks_and_issues.py  1_🍴_Forks_and_issues.py  2_Project_lifetimes.py  2_🍂_Project_lifetimes.py  3_Links_and_data.py  3_📊_Links_and_data.py  4_🌟_My_favorites.py  5_Feedback.py  5_📝_Feedback.py  final.py
data/: metadata.json  ssg.csv  ssg.yaml  ssg2.yaml
docs/: api.rst  conf.py  index.rst  modules.rst  ssg.rst  tools.md
docs/site/: index.html
example/: README.md  arc.py  badge.py  demo.py  one_ssg.py  plot.py  read.py  rebuild.py  table.py  update.py
example/experimental/: ask_google.py  ask_google2.py  table.py
example/experimental/ask_google/: ask_google.py
experimental/badge/: badge.md  badge.py
scripts/: ask_google.py  ask_google2.py
src/ssg/: __init__.py  cache.py  github.py  metadata.py  ssg.py  stars.py
tests/: test_badge.py  test_github.py  test_ssg.py  test_stars.py  test_streamlit_app.py
