[tool.poetry]
name = "ssg"
version = "0.1.4"
description = "Github data for static site generators popularity"
authors = ["Evgeniy Pogrebnyak <e.pogrebnyak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests-cache = "^0.5.2"
python-dotenv = "^0.15.0"
pandas = "^1.2.0"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.4.2"
streamlit = "^0.74.0"
myst-parser = "^0.13.1"
pydata-sphinx-theme = "^0.4.1"
ghp-import = "^1.0.0"
pylint = "^2.6.0"
mypy = "^0.790"
tabulate = "^0.8.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
